--- a/ctb profiles/_AnyCubic_Photon_M3_Max_#1_MAYER_MAKES_Engineering_Resin_profile.cfg
+++ b/ctb profiles/_AnyCubic_Photon_M3_Max_#1_MAYER_MAKES_Engineering_Resin_profile.cfg
@@ -1,4 +1,4 @@
-__resin:normal
+__resin:engineering
 actualPrintingTimeHour:
 actualPrintingTimeMinute:
 actualPrintingTimeSecond:
@@ -23,8 +23,8 @@ bottomLayerCount:6
 bottomLayerDropHeight2:0
 bottomLayerDropSpeed:240
 bottomLayerDropSpeed2:0
-bottomLayerExposureTime:30
-bottomLayerLiftHeight:10
+bottomLayerExposureTime:40
+bottomLayerLiftHeight:12
 bottomLayerLiftHeight2:0
 bottomLayerLiftSpeed:240
 bottomLayerLiftSpeed2:0
@@ -59,9 +59,9 @@ innerCircleOffset:0
 isHALOT:0
 isSupportTSMC:1
 layerGcode:
-layerHeight:0.05
+layerHeight:0.1
 layerPrintTime:
-lightOffTime:2
+lightOffTime:0
 machineDepth:165.6
 machineHeight:300
 machineType:AnyCubic Photon M3 Max
@@ -69,11 +69,11 @@ machineWidth:298.08
 maskGrayScaleUnit:4
 maxGreyLevel:255
 minGreyLevel:0
-normalExposureTime:4
+normalExposureTime:5
 normalLayerDropHeight2:0
 normalLayerDropSpeed:240
 normalLayerDropSpeed2:0
-normalLayerLiftHeight:10
+normalLayerLiftHeight:12
 normalLayerLiftHeight2:0
 normalLayerLiftSpeed:240
 normalLayerLiftSpeed2:0
@@ -101,7 +101,7 @@ transitionLayerCount:0
 transitionLayerType:0
 waitModeChangedVisible:0
 zSlowUpDistance:0
-@@MAYER MAKES Engineering Resin@@__resin:normal
+@@MAYER MAKES Engineering Resin@@__resin:engineering
 @@MAYER MAKES Engineering Resin@@actualPrintingTimeHour:
 @@MAYER MAKES Engineering Resin@@actualPrintingTimeMinute:
 @@MAYER MAKES Engineering Resin@@actualPrintingTimeSecond:
@@ -127,7 +127,7 @@ zSlowUpDistance:0
 @@MAYER MAKES Engineering Resin@@bottomLayerDropSpeed:240
 @@MAYER MAKES Engineering Resin@@bottomLayerDropSpeed2:0
 @@MAYER MAKES Engineering Resin@@bottomLayerExposureTime:40
-@@MAYER MAKES Engineering Resin@@bottomLayerLiftHeight:10
+@@MAYER MAKES Engineering Resin@@bottomLayerLiftHeight:12
 @@MAYER MAKES Engineering Resin@@bottomLayerLiftHeight2:0
 @@MAYER MAKES Engineering Resin@@bottomLayerLiftSpeed:240
 @@MAYER MAKES Engineering Resin@@bottomLayerLiftSpeed2:0
@@ -162,9 +162,9 @@ zSlowUpDistance:0
 @@MAYER MAKES Engineering Resin@@isHALOT:0
 @@MAYER MAKES Engineering Resin@@isSupportTSMC:1
 @@MAYER MAKES Engineering Resin@@layerGcode:
-@@MAYER MAKES Engineering Resin@@layerHeight:0.05
+@@MAYER MAKES Engineering Resin@@layerHeight:0.1
 @@MAYER MAKES Engineering Resin@@layerPrintTime:
-@@MAYER MAKES Engineering Resin@@lightOffTime:2
+@@MAYER MAKES Engineering Resin@@lightOffTime:0
 @@MAYER MAKES Engineering Resin@@machineDepth:165.6
 @@MAYER MAKES Engineering Resin@@machineHeight:300
 @@MAYER MAKES Engineering Resin@@machineType:AnyCubic Photon M3 Max
@@ -172,11 +172,11 @@ zSlowUpDistance:0
 @@MAYER MAKES Engineering Resin@@maskGrayScaleUnit:4
 @@MAYER MAKES Engineering Resin@@maxGreyLevel:255
 @@MAYER MAKES Engineering Resin@@minGreyLevel:0
-@@MAYER MAKES Engineering Resin@@normalExposureTime:3
+@@MAYER MAKES Engineering Resin@@normalExposureTime:5
 @@MAYER MAKES Engineering Resin@@normalLayerDropHeight2:0
 @@MAYER MAKES Engineering Resin@@normalLayerDropSpeed:240
 @@MAYER MAKES Engineering Resin@@normalLayerDropSpeed2:0
-@@MAYER MAKES Engineering Resin@@normalLayerLiftHeight:10
+@@MAYER MAKES Engineering Resin@@normalLayerLiftHeight:12
 @@MAYER MAKES Engineering Resin@@normalLayerLiftHeight2:0
 @@MAYER MAKES Engineering Resin@@normalLayerLiftSpeed:240
 @@MAYER MAKES Engineering Resin@@normalLayerLiftSpeed2:0
